[package]
name = "bijou-rocksdb"
description = "Rust wrapper for Facebook's RocksDB embeddable database"
version = "0.21.1"
edition = "2018"
rust-version = "1.63"
authors = ["Tyler Neely <t@jujit.su>", "David Greenberg <dsg123456789@gmail.com>"]
repository = "https://github.com/Mivik/rust-rocksdb"
license = "Apache-2.0"
categories = [ "database" ]
keywords = ["database", "embedded", "LSM-tree", "persistence"]
homepage = "https://github.com/Mivik/rust-rocksdb"
exclude = [
    ".gitignore",
    ".travis.yml",
    "deploy.sh",
    "test/**/*",
]

[workspace]
members = ["bijou-librocksdb-sys"]

[features]
default = ["snappy", "lz4", "zstd", "zlib", "bzip2"]
jemalloc = ["bijou-librocksdb-sys/jemalloc"]
io-uring = ["bijou-librocksdb-sys/io-uring"]
valgrind = []
snappy = ["bijou-librocksdb-sys/snappy"]
lz4 = ["bijou-librocksdb-sys/lz4"]
zstd = ["bijou-librocksdb-sys/zstd"]
zlib = ["bijou-librocksdb-sys/zlib"]
bzip2 = ["bijou-librocksdb-sys/bzip2"]
rtti = ["bijou-librocksdb-sys/rtti"]
multi-threaded-cf = []
serde1 = ["serde"]

[dependencies]
libc = "0.2"
bijou-librocksdb-sys = { path = "bijou-librocksdb-sys", version = "0.11.1" }
serde = { version = "1", features = [ "derive" ], optional = true }

[dev-dependencies]
trybuild = "1.0"
tempfile = "3.1"
pretty_assertions = "1.0"
bincode = "1.3"
serde = { version = "1", features = [ "derive" ] }
